--- a/paper/main.tex
+++ b/paper/main.tex
@@ -33,11 +33,23 @@
 
 \section*{Abstract}
 
-\section{Introduction}
-
-\section{Conclusion}
 
 
+
+
+\input{intro}
+
+\input{background}
+
+\input{design}
+
+\input{impl}
+
+\input{results}
+
+\input{related}
+
+\input{concl}
 
 \bibliographystyle{abbrv}
 \bibliography{bib/csrg,main}
