--- a/paper/results.tex
+++ b/paper/results.tex
@@ -1,2 +1,9 @@
 \section{Results and Analysis}
 
+
+\subsection{Data Movement in the Hash Table}
+
+\subsection{Transaction Sizes}
+
+\subsection{Performance}
+
