--- a/paper/concl.tex
+++ b/paper/concl.tex
@@ -2,6 +2,11 @@
 
 
 
+Defining a persists-with relationship.
+One place it would be good would be the data load-in area... where we could have
+the data persist-with the item size, which would be more efficient than
+releasing a word at a time.
+
 
 \section{Conclusion}
 
