--- a/paper/results.tex
+++ b/paper/results.tex
@@ -3,7 +3,31 @@
 
 \subsection{Data Movement in the Hash Table}
 
+\begin{figure}
+\centering
+\includegraphics[width=100mm]{fig/moves}
+\caption{Stuff}
+\label{fig:moves}
+\end{figure}
+
 \subsection{Transaction Sizes}
 
 \subsection{Performance}
+
+\begin{figure}
+\centering
+\hspace*{-0.5in}
+\includegraphics[width=98mm]{fig/perf}
+\caption{Stuff}
+\label{fig:perf}
+\end{figure}
+
+\begin{figure}
+\centering
+\hspace*{-0.5in}
+\includegraphics[width=98mm]{fig/line}
+\caption{Stuff}
+\label{fig:line}
+\end{figure}
+
 
