--- a/paper/design.tex
+++ b/paper/design.tex
@@ -8,7 +8,7 @@ transaction cannot take too many instructions, nor have too many memory
 accesses. Of course, we're designing under an assumption about how transactions
 will work... they may turn out differently. So we're designing pessimistically.
 
-#memory accesses matter more than number of instructions, but the total length
+num memory accesses matter more than number of instructions, but the total length
 matters too.
 
 We can also optimize certain parts of the code with Os and other parts with
