--- a/paper/main.tex
+++ b/paper/main.tex
@@ -19,6 +19,12 @@
 \usepackage[format=plain,
             labelfont={bf,it},
             textfont=it]{caption}
+\usepackage{listings}
+
+
+
+
+
 \author{Daniel Bittman \\ dbittman@ucsc.edu}
 \title{Keys and Values}
 
@@ -28,6 +34,20 @@
 \maketitle
 \libertine 
 \renewcommand\ttdefault{lmtt}
+
+\lstset{ 
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
+  basicstyle=\ttfamily\footnotesize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  deletekeywords={...},            % if you want to delete keywords from the given language
+  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+}
+
+
 
 
 
