--- a/paper/main.tex
+++ b/paper/main.tex
@@ -26,7 +26,8 @@
 
 
 \author{Daniel Bittman \\ dbittman@ucsc.edu}
-\title{Keys and Values}
+\title{NVKV: Building a KV Store for Non-Volatile Memory\\{\small CMPS278:
+Database Design and Implementation: Class Project\\\vspace{-5mm}Instructor: Shel Finkelstein}}
 
 \newcommand{\etal}{\emph{et~al.}\xspace}
 \begin{document}
