--- a/paper/design.tex
+++ b/paper/design.tex
@@ -13,3 +13,38 @@ matters too.
 
 We can also optimize certain parts of the code with Os and other parts with
 O2/3.
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{figure}
+\centering
+\hspace*{-0.3in}
+\includegraphics[width=88mm]{fig/addrspace}
+\caption{Stuff.}
+\label{fig:addrspace}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=70mm,height=50mm]{fig/cuckoo_insert}
+\caption{Stuff.}
+\label{fig:insert}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=100mm]{fig/cuckoo_rehash}
+\caption{Stuff.}
+\label{fig:rehash}
+\end{figure}
+
