Added analysis and captions.

--- a/paper/concl.tex
+++ b/paper/concl.tex
@@ -8,5 +8,7 @@ the data persist-with the item size, which would be more efficient than
 releasing a word at a time.
 
 
+Optimize levels on load / unload (so we don't have to search them all).
+
 \section{Conclusion}
 
