--- a/paper/main.tex
+++ b/paper/main.tex
@@ -72,8 +72,8 @@ Database Design and Implementation: Class Project\\\vspace{-5mm}Instructor: Shel
 
 \input{concl}
 
-\bibliographystyle{abbrv}
-\bibliography{bib/csrg,main}
+\bibliographystyle{plain}
+\bibliography{bib/csrg,main,pcm_hardware}
 
 \end{document}
 
