--- a/paper/main.bib
+++ b/paper/main.bib
@@ -104,6 +104,26 @@
  address = {New York, NY, USA},
 } 
 
+@article{stm,
+ author = {Cascaval, Calin and Blundell, Colin and Michael, Maged and Cain, Harold W. and Wu, Peng and Chiras, Stefanie and Chatterjee, Siddhartha},
+ title = {Software Transactional Memory: Why Is It Only a Research Toy?},
+ journal = {Queue},
+ issue_date = {September 2008},
+ volume = {6},
+ number = {5},
+ month = sep,
+ year = {2008},
+ issn = {1542-7730},
+ pages = {40:46--40:58},
+ articleno = {40},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1454456.1454466},
+ doi = {10.1145/1454456.1454466},
+ acmid = {1454466},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 @inproceedings{echo,
  author = {Bailey, Katelin A. and Hornyack, Peter and Ceze, Luis and Gribble, Steven D. and Levy, Henry M.},
  title = {Exploring Storage Class Memory with Key Value Stores},
