--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,7 +10,6 @@
 \usepackage[backgroundcolor=yellow]{todonotes}
 \usepackage[utf8]{inputenc}
 \usepackage{bibentry}
-\usepackage{hyperref}
 \usepackage{float}
 \usepackage[ttscale=.875]{libertine}
 \usepackage{listings}
@@ -20,6 +19,8 @@
             labelfont={bf,it},
             textfont=it]{caption}
 \usepackage{listings}
+\usepackage[hyphens]{url}
+\usepackage[breaklinks]{hyperref}
 
 
 
@@ -55,7 +56,8 @@ Database Design and Implementation: Class Project\\\vspace{-5mm}Instructor: Shel
 \section*{Abstract}
 
 
-
+%TO cite:
+%kolli:asplos16 lu:tos16, wang:cal15(transactionS)
 
 
 \input{intro}
