--- a/paper/impl.tex
+++ b/paper/impl.tex
@@ -1,5 +1,14 @@
 \section{Implementation}
 
+NVKV is shared lib drop-in replacement for BDB.
+Describe LoC, cmplexity.
+get\_pointer stuff.
+
+what are we ignoring (due to not having bnvm)
+
+
+\subsection{Consistency Mechanisms}
+
 cuckoo:
 order of lookup REALLY matters: reverse order.
 
