--- a/paper/main.bib
+++ b/paper/main.bib
@@ -278,6 +278,23 @@
  address = {New York, NY, USA},
 } 
 
+@techreport{bittman-ssrctr-17-01,
+  author       = {Daniel Bittman and Matthew Bryson and Yuanjiang Ni and Arjun
+Govindjee and Isaak Cherdak and Pankaj Mehra and Darrell D. E.
+Long and Ethan L. Miller},
+  title        = {Twizzler: An Operating System for Next-Generation Memory
+Hierarchies},
+  institution  = {University of California, Santa Cruz},
+  number       = {UCSC-SSRC-17-01},
+  month        = dec,
+  year         = {2017},
+}
+
+@misc{dax,
+	title={Direct Access for files},
+	publisher={The Linux Kernel Documentation},
+	note={\url{https://www.kernel.org/doc/Documentation/filesystems/dax.txt}},
+}
 
 @article{bhandari2012implications,
   title={Implications of CPU caching on byte-addressable non-volatile memory programming},
