--- a/paper/main.tex
+++ b/paper/main.tex
@@ -31,6 +31,7 @@
 Database Design and Implementation: Class Project\\\vspace{-5mm}Instructor: Shel Finkelstein}}
 
 \newcommand{\etal}{\emph{et~al.}\xspace}
+\newcommand{\bdb}{Berkeley DB\xspace}
 \begin{document}
 \biolinum
 \maketitle
